WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308572
Crash in `WebPageProxy::viewWillStartLiveResize`
https://bugs.webkit.org/show_bug.cgi?id=308572
Summary
Crash in `WebPageProxy::viewWillStartLiveResize`
Charlie Wolfe
Reported
2026-02-24 12:18:37 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Charlie Wolfe
Comment 1
2026-02-24 12:18:38 PST
<
rdar://problem/170836812
>
Charlie Wolfe
Comment 2
2026-02-24 12:20:28 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59354
EWS
Comment 3
2026-02-24 19:33:54 PST
Committed
308176@main
(be4914eab1fe): <
https://commits.webkit.org/308176@main
> Reviewed commits have been landed. Closing PR #59354 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug