Cherry-pick 308176@main (be4914eab1fe). https://bugs.webkit.org/show_bug.cgi?id=308572

Crash in `WebPageProxy::viewWillStartLiveResize`
    https://bugs.webkit.org/show_bug.cgi?id=308572
    rdar://170836812

    Reviewed by Rupin Mittal.

    * Source/WebKit/UIProcess/WebPageProxy.cpp:
    (WebKit::WebPageProxy::viewWillStartLiveResize):
    (WebKit::WebPageProxy::viewWillEndLiveResize):

    Canonical link: https://commits.webkit.org/308176@main

Canonical link: https://commits.webkit.org/305877.106@webkitglib/2.52